--- a/public/stylesheet/sass/bootstrap/_navbar.scss
+++ b/public/stylesheet/sass/bootstrap/_navbar.scss
@@ -234,7 +234,7 @@
 
 // Navbar nav links
 //
-// Builds on top of the `.nav` components with its own modifier class to make
+// Builds on top of the `.nav` component with its own modifier class to make
 // the nav the full height of the horizontal nav (above 768px).
 
 .navbar-nav {
@@ -390,7 +390,7 @@
 // issues with parents and chaining. Only do this when the navbar is uncollapsed
 // though so that navbar contents properly stack and align in mobile.
 //
-// Declared after the navbar components to ensure more specificity on the margins.
+// Declared after the navbar component to ensure more specificity on the margins.
 
 @media (min-width: $grid-float-breakpoint) {
   .navbar-left {
