--- a/public/stylesheet/sass/bootstrap/_print.scss
+++ b/public/stylesheet/sass/bootstrap/_print.scss
@@ -68,7 +68,7 @@
 
     // Bootstrap specific changes start
 
-    // Bootstrap components
+    // Bootstrap component
     .navbar {
         display: none;
     }
